# android_voice

./: README.md
cmake/: android.cmake  c++11_check.cmake
include/: AUDEC_Header.h  my_voice_engine_interface.h  my_voice_engine_types.h  rtp_header.h
src/: CMakeLists.txt  CodecMgr.cpp  CodecMgr.h  G7221Helper.cpp  G7221Helper.h  IVoiceChannel.h  IVoiceCodec.h  OpenSLESCore.cpp  OpenSLESCore.h  PlayerChannel.cpp  PlayerChannel.h  RecordChannel.cpp  RecordChannel.h  VoiceMgr.cpp  VoiceMgr.h  my_voice_engine_impl.cpp  my_voice_engine_impl.h  native-audio-jni.cpp  native_debug.h
src/XUtil/: NonCopyable.hpp  OperationMgr.cpp  OperationMgr.h  XAutoLock.cpp  XAutoLock.h  XCritSec.cpp  XCritSec.h  XDataPool.cpp  XDataPool.h  XListPtr.cpp  XListPtr.h  XThreadBase.cpp  XThreadBase.h  XUtil.cpp  XUtil.h
src/libg7221/: dct4.c  g722_1.h
src/libg7221/g722_1/: g722_1.h
